icon ios correction

--- a/header.css
+++ b/header.css
@@ -187,7 +187,7 @@ img[src="Logo/ODDO Logo (14).png"] {
 }
 
 img[src="Logo/ODDO Logo (15).png"] {
-    width: 15.7%; 
+    width: 15.6%; 
     /* Was at 15.6 last */
 }
 
